--- a/logs.html
+++ b/logs.html
@@ -40,15 +40,13 @@
                 </div>
             </div>
             <div class="flex items-center gap-4 w-full md:w-auto">
-                <select id="sortSelect"
-                        class="border border-gray-300 rounded px-3 py-2 text-sm shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400">
+                <select id="sortSelect" class="border border-gray-300 rounded px-3 py-2 text-sm shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400">
                     <option value="recent">Most Recent</option>
                     <option value="oldest">Oldest First</option>
                     <option value="user-asc">User Name A–Z</option>
                     <option value="user-desc">User Name Z–A</option>
                 </select>
-                <select id="dateFilter"
-                        class="border border-gray-300 rounded px-3 py-2 text-sm shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400">
+                <select id="dateFilter" class="border border-gray-300 rounded px-3 py-2 text-sm shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400">
                     <option value="all">All Time</option>
                     <option value="7">Last 7 Days</option>
                     <option value="30">Last 30 Days</option>
@@ -58,9 +56,7 @@
         </div>
 
         <!-- Logs Container -->
-        <div id="logsContainer" class="border rounded-lg overflow-hidden">
-            <!-- Logs will be inserted here by JavaScript -->
-        </div>
+        <div id="logsContainer" class="border rounded-lg overflow-hidden"></div>
 
         <!-- Loading Indicator -->
         <div id="loadingIndicator" class="text-center py-8">
